--- a/conf/locale/he_IL/LC_MESSAGES/packetfence.po
+++ b/conf/locale/he_IL/LC_MESSAGES/packetfence.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PacketFence\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-04-19 15:57+0000\n"
+"PO-Revision-Date: 2017-05-31 18:56+0000\n"
 "Last-Translator: inverse <info@inverse.ca>\n"
 "Language-Team: Hebrew (Israel) (http://www.transifex.com/inverse/packetfence/language/he_IL/)\n"
 "MIME-Version: 1.0\n"
@@ -88,6 +88,11 @@ msgstr ""
 msgid "An error occured"
 msgstr ""
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "An type and activation code is required"
+msgstr ""
+
 # pf::person::FIELDS
 msgid "Anniversary"
 msgstr ""
@@ -163,6 +168,11 @@ msgstr ""
 msgid "Cost"
 msgstr ""
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "Could not find unregistration date for this activation code."
+msgstr ""
+
 # html/captive-portal/templates/account.html
 msgid "Created account %s"
 msgstr ""
@@ -218,6 +228,11 @@ msgstr ""
 # html/captive-
 # portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
 msgid "Device registration landing"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
+msgid "Device registration module is not enabled"
 msgstr ""
 
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
@@ -457,6 +472,11 @@ msgstr "MAC"
 msgid "MAC Address"
 msgstr ""
 
+# html/captive-portal/templates/device-registration/landing.html
+# html/captive-portal/templates/device-registration/registration.html
+msgid "Manage registered devices"
+msgstr ""
+
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 msgid "Mobile provider"
 msgstr ""
@@ -472,6 +492,19 @@ msgstr ""
 
 # pf::person::FIELDS
 msgid "Nickname"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "No active sponsor source for this Connection Profile."
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Node/Manager.pm
+msgid "Not allowed to deregister $mac"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Node/Manager.pm
+msgid "Not logged in or node ID $mac is not known"
 msgstr ""
 
 # pf::person::FIELDS
@@ -577,6 +610,11 @@ msgstr ""
 msgid "Please ignore this request if you have not requested network access."
 msgstr ""
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
+msgid "Please verify the provided MAC address."
+msgstr ""
+
 # pf::person::FIELDS
 msgid "Portal"
 msgstr ""
@@ -597,6 +635,10 @@ msgstr ""
 
 # html/captive-portal/templates/device-registration/registration.html
 msgid "Register"
+msgstr ""
+
+# html/captive-portal/templates/status.html
+msgid "Register a device"
 msgstr ""
 
 # html/captive-portal/templates/device-registration/landing.html
@@ -690,6 +732,13 @@ msgstr ""
 # html/captive-portal/templates/emails/emails-guest_email_activation.html
 # html/captive-portal/templates/emails/emails-guest_email_preregistration.html
 msgid "Thank you for your understanding"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid ""
+"The activation code provided is invalid. Reasons could be: it never existed,"
+" it was already used or has expired."
 msgstr ""
 
 # html/captive-portal/templates/emails/emails-
@@ -930,23 +979,29 @@ msgstr ""
 
 # pf::web::constants (Locales)
 msgid "de_DE"
-msgstr "גרמנית"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "does not have permission to sponsor a user"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "en_US"
-msgstr "אנגלית"
+msgstr ""
 
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
 # lib/pf/web/release.pm
 msgid "error: max re-enables reached"
-msgstr "הגעת למקסימום הפעלות-מחדש!"
+msgstr ""
 
 # lib/pf/web/release.pm
 msgid "error: not found in the database"
-msgstr "המחשב שלך לא נמצא במסד הנתונים של PacketFence. נא להפעיל מחדש את המחשב כדי לפתור בעיה זו."
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "es_ES"
-msgstr "ספרדית"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "fr_CA"
@@ -954,7 +1009,7 @@ msgstr ""
 
 # pf::web::constants (Locales)
 msgid "fr_FR"
-msgstr "צרפתית"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "he_IL"
@@ -962,15 +1017,15 @@ msgstr ""
 
 # html/captive-portal/templates/layout.html
 msgid "help: provide info"
-msgstr "אם יש לך שאלות בקשר לדף זה, צור קשר עם איש התמיכה לסיוע. בבקשה ספק לו את הפרטים הבאים:"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "it_IT"
-msgstr "איטלית"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "nl_NL"
-msgstr "הולנדית"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "pl_PL"
@@ -978,7 +1033,7 @@ msgstr ""
 
 # pf::web::constants (Locales)
 msgid "pt_BR"
-msgstr "פורטוגזית"
+msgstr ""
 
 # html/captive-
 # portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Blackhole.pm
@@ -991,7 +1046,7 @@ msgstr ""
 
 # lib/pf/web/release.pm
 msgid "release: reopen browser"
-msgstr "אתה יכול לפתוח מחדש את הדפדפן שלך על מנת לגשת לאינטרנט. אם אתה אם אתה מחובר דרך טלפון, עליך להפעיל מחדש את המחשב."
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 msgid "requested guest access to your network."
@@ -1001,9 +1056,9 @@ msgstr ""
 # html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
 # html/captive-portal/templates/scan-in-progress.html
 msgid "scan: scan in progress"
-msgstr "המחשב שלך נסרק"
+msgstr ""
 
 # html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
 # lib/pf/web.pm
 msgid "system scan in progress"
-msgstr "המחשב שלך נסרק  - תהליך זה יקח בערך %s שניות."
+msgstr ""
