--- a/conf/locale/fr/LC_MESSAGES/packetfence.po
+++ b/conf/locale/fr/LC_MESSAGES/packetfence.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PacketFence\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-04-19 16:00+0000\n"
+"PO-Revision-Date: 2017-05-31 19:08+0000\n"
 "Last-Translator: oeufdure <fdurand@inverse.ca>\n"
 "Language-Team: French (http://www.transifex.com/inverse/packetfence/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -96,6 +96,11 @@ msgstr "Un courriel avec les informations pour se connecter arrivera dans un ins
 msgid "An error occured"
 msgstr "Une erreur est survenue"
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "An type and activation code is required"
+msgstr "Un type et un code d'activation est requis"
+
 # pf::person::FIELDS
 msgid "Anniversary"
 msgstr "Anniversaire"
@@ -171,6 +176,11 @@ msgstr "Continuer"
 msgid "Cost"
 msgstr "Coût"
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "Could not find unregistration date for this activation code."
+msgstr "Ne trouve pas de date de des-enregistrement pour ce code d'activation."
+
 # html/captive-portal/templates/account.html
 msgid "Created account %s"
 msgstr "Créer le compte %s"
@@ -227,6 +237,11 @@ msgstr "Type d'appareil"
 # portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
 msgid "Device registration landing"
 msgstr "Page d'enregistrement du device"
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
+msgid "Device registration module is not enabled"
+msgstr "Le module d'enregistrement des appareils n'est pas activé."
 
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 msgid "Do NOT authorize access if you were not expecting this guest."
@@ -465,6 +480,11 @@ msgstr "MAC"
 msgid "MAC Address"
 msgstr "Adresse MAC"
 
+# html/captive-portal/templates/device-registration/landing.html
+# html/captive-portal/templates/device-registration/registration.html
+msgid "Manage registered devices"
+msgstr "Manager les appareils enregistrés"
+
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 msgid "Mobile provider"
 msgstr "Opérateur mobile"
@@ -481,6 +501,19 @@ msgstr "Accès au réseau accordé"
 # pf::person::FIELDS
 msgid "Nickname"
 msgstr "Surnom"
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "No active sponsor source for this Connection Profile."
+msgstr "Pas de source de sponsor active pour ce profile de connexion."
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Node/Manager.pm
+msgid "Not allowed to deregister $mac"
+msgstr "Pas autorisé a enregistrer cette mac $mac"
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Node/Manager.pm
+msgid "Not logged in or node ID $mac is not known"
+msgstr "Pas connecté ou mac $mac est inconnu"
 
 # pf::person::FIELDS
 msgid "Notes"
@@ -585,6 +618,11 @@ msgstr "Pid"
 msgid "Please ignore this request if you have not requested network access."
 msgstr "Ignorer cette requête si vous n’avez pas demandé un accès au réseau "
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
+msgid "Please verify the provided MAC address."
+msgstr "Veuillez vérifier l'adresse MAC entrée"
+
 # pf::person::FIELDS
 msgid "Portal"
 msgstr "Portail"
@@ -606,6 +644,10 @@ msgstr "Prix"
 # html/captive-portal/templates/device-registration/registration.html
 msgid "Register"
 msgstr "Enregistrement"
+
+# html/captive-portal/templates/status.html
+msgid "Register a device"
+msgstr "Enregistrer un appareil"
 
 # html/captive-portal/templates/device-registration/landing.html
 msgid "Register another device"
@@ -699,6 +741,13 @@ msgstr "Merci pour votre achat."
 # html/captive-portal/templates/emails/emails-guest_email_preregistration.html
 msgid "Thank you for your understanding"
 msgstr "Merci de votre compréhension."
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid ""
+"The activation code provided is invalid. Reasons could be: it never existed,"
+" it was already used or has expired."
+msgstr "Le code d'activation entré est invalide. Les raisons pourraient être: il n'a jamais existé, il a déja êté utilisé ou expiré. "
 
 # html/captive-portal/templates/emails/emails-
 # billing_stripe_customer.subscription.deleted.html
@@ -938,23 +987,29 @@ msgstr "Votre abonnement a été annulé."
 
 # pf::web::constants (Locales)
 msgid "de_DE"
-msgstr "Deutsch"
+msgstr "de_DE"
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "does not have permission to sponsor a user"
+msgstr "n'a pas la permission de sponsoriser un utilisateur"
 
 # pf::web::constants (Locales)
 msgid "en_US"
-msgstr "English"
+msgstr "en_US"
 
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
 # lib/pf/web/release.pm
 msgid "error: max re-enables reached"
-msgstr "Réactivation maximale atteinte !"
+msgstr "Limite de réactivation atteinte"
 
 # lib/pf/web/release.pm
 msgid "error: not found in the database"
-msgstr "Votre ordinateur n´a pas été trouvé dans la base de donnée de PacketFence. Veuillez redémarrer pour résoudre ce problème."
+msgstr "Non trouvé dans la base de donnée"
 
 # pf::web::constants (Locales)
 msgid "es_ES"
-msgstr "Español"
+msgstr "es_ES"
 
 # pf::web::constants (Locales)
 msgid "fr_CA"
@@ -962,7 +1017,7 @@ msgstr "fr_CA"
 
 # pf::web::constants (Locales)
 msgid "fr_FR"
-msgstr "Français"
+msgstr "fr_FR"
 
 # pf::web::constants (Locales)
 msgid "he_IL"
@@ -970,36 +1025,36 @@ msgstr "he_IL"
 
 # html/captive-portal/templates/layout.html
 msgid "help: provide info"
-msgstr "Si vous avez des questions par rapport à cette page, veuillez contacter votre équipe informatique et leur fournir les informations suivantes : "
+msgstr "Informations fournies"
 
 # pf::web::constants (Locales)
 msgid "it_IT"
-msgstr "Italiano"
+msgstr "it_IT"
 
 # pf::web::constants (Locales)
 msgid "nl_NL"
-msgstr "Dutch"
+msgstr "nl_NL"
 
 # pf::web::constants (Locales)
 msgid "pl_PL"
-msgstr "Polski"
+msgstr "pl_PL"
 
 # pf::web::constants (Locales)
 msgid "pt_BR"
-msgstr "Português"
+msgstr "pt_BR"
 
 # html/captive-
 # portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Blackhole.pm
 msgid "register: not allowed to register"
-msgstr "Vous n'êtes pas autorisé à vous enregistrer sur ce reseau."
+msgstr "Pas autorisé a enregistrer"
 
 # html/captive-portal/lib/captiveportal/PacketFence/DynamicRouting/Module.pm
 msgid "release: enabling network"
-msgstr "Activer l’accès au réseau"
+msgstr "Activation de l'acces réseau"
 
 # lib/pf/web/release.pm
 msgid "release: reopen browser"
-msgstr "Vous devrez probablement fermer votre navigateur afin que votre accès Internet fonctionne. Si vous êtes branché dans un téléphone, vous devrez redémarrer votre ordinateur afin que votre accès Internet fonctionne."
+msgstr "Réouvrir le navigateur"
 
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 msgid "requested guest access to your network."
@@ -1009,9 +1064,9 @@ msgstr "a demandé un accès invité a votre réseau."
 # html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
 # html/captive-portal/templates/scan-in-progress.html
 msgid "scan: scan in progress"
-msgstr "Votre système est en cours d'analyse"
+msgstr "Scan en cours"
 
 # html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
 # lib/pf/web.pm
 msgid "system scan in progress"
-msgstr "Analyse de votre système en cours - ce processus prendra approximativement %s secondes."
+msgstr "Scan systhème en cours"
