--- a/docs/PacketFence_Network_Devices_Configuration_Guide.asciidoc
+++ b/docs/PacketFence_Network_Devices_Configuration_Guide.asciidoc
@@ -4960,53 +4960,14 @@ To configure Hostapd software you can use the same configuration parameters abov
 Meraki
 ~~~~~~
 
-In this section, we will cover the configuration of the Meraki controller to use Web authentication.
-
-CAUTION: There is currently no way to reevaluate the access of the device using PacketFence. This means that there is no real-time action when trying to isolate a device. The RADIUS reauthentication delay will determine the maximum response time of the access reevaluation.
-
-First create a new SSID and then edit its settings.
-
-Configure it as seen in the screenshot below.
-
-image::docs/images/meraki-radius-config.png[scaledwidth="100%",alt="RADIUS configuration"]
-
-NOTE: Make sure to configure your RADIUS server so it's accessible externally under a domain name or a public IP address. Replace `pf.domain.net` by what you will configure. The only port needed is 1812 in UDP. Refer to the Meraki documentation for more details.
-
-Next, just below, configure the options for the users access as shown in the screenshot below.
-
-image::docs/images/meraki-network-config.png[scaledwidth="100%",alt="Network configuration"]
-
-Where 192.168.1.5 is the IP address of your PacketFence server.
-
-NOTE: Make sure you select bridge mode so your users are not NATed through your AP. If you need the devices to be on another VLAN, modify the VLAN tagging of the SSID.
-
-Next go in *Wireless->Configure->Splash page*. Select the *Custom splash URL* and configure the URL pointing to your PacketFence server.
-
-image::docs/images/meraki-splash-config.png[scaledwidth="100%",alt="Splash page configuration"]
-
-NOTE: Even if you enabled the bridge mode on the access point, it will still send a NATed IP address during the initial HTTP request. To workaround this you will need to forward the DHCP traffic of the network your nodes are connected to so PacketFence has the proper IP information of the devices.
-
-Once you have configured the Meraki, you will need to configure it in the PacketFence switches. You will need to create an entry for the public IP address of your cloud controller and one for the MAC address of your AP. Here is the resulting configuration for switches.conf.
-
-  [1.1.1.1]
-  description=Meraki Cloud controller
-  type=Meraki::MR
-  radiusSecret=useStrongerSecret
-  mode=production
-
-  [00:11:22:33:44:55]
-  description=Meraki local access point
-  type=Meraki::MR
-  radiusSecret=useStrongerSecret
-  mode=production
-
-RFC 5176
-^^^^^^^^
+To add the AP on PacketFence make sure to add the AP by IP, using the internal IP of the AP.
 
 WebAuth
 +++++++
 
-NOTE: While using the WebAuth mode on the Meraki controller with a version superior to X.X, you need to use "Role mapping by Switch Role" and "Role by Web Auth URL" in the tab 'Roles' from the switch configuration.
+In this section, we will cover the configuration of the Meraki controller to use Web authentication.
+
+NOTE: While using the WebAuth mode on the Meraki controller, you need to use "Role mapping by Switch Role" and "Role by Web Auth URL" in the tab 'Roles' from the switch configuration.
 
 Configure your SSID as shown below:
 
@@ -5031,15 +4992,11 @@ image::docs/images/Meraki-config-pf-url.png[scaledwidth="100%",alt="PacketFence 
 VLAN enforcement
 ++++++++++++++++
 
-NOTE: VLAN assignment in MAC authentication does not work at the moment, you can look through lib/pf/Switch/Meraki/AP_http_V2.pm in the `BUGS AND LIMITATIONS` part or use the following method. Note that this method will be considered as deprecated when the Meraki firmware is fixed.
+This section will cover how to configure the Meraki to use with VLAN enforcement, use the configuration in the section `WebAuth` for the SSID.
 
-If you want to run the Meraki in VLAN assignment, you will need to use the Group policies, create a group policy under 'Network-wide->Group policies' and change the setting `VLAN` to `Tag VLAN`, insert the VLAN number of your registration VLAN and save the policy.
+In the configuration of PacketFence, use "Role by VLAN ID" and fill the VLAN matching your controller.
 
-image::docs/images/Meraki-config-vlan.png[scaledwidth="100%",alt="VLAN policy"]
-
-In the configuration of PacketFence, use "Role mapping by Switch Role" instead of "Role by VLAN ID".
-
-image::docs/images/Meraki-config-pf-role.png[scaledwidth="100%",alt="PacketFence role configuration"]
+image::docs/images/Meraki-vlan-pf.png[scaledwidth="100%",alt="PacketFence role configuration"]
 
 Switch MS220-8
 ++++++++++++++
