--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -11,6 +11,21 @@ This is a list of noteworthy changes across releases.
 For more details and developer visible changes see the ChangeLog file.
 For a list of compatibility related changes see the UPGRADE.asciidoc file.
 
+
+Version X.Y.z released on XXXX-YY-ZZ
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+New Features
+++++++++++++
+
+Enhancements
+++++++++++++
+
+* caddy based services now support systemd notifications.
+
+Bug Fixes
++++++++++
+
 Version 7.1.0 released on 2017-06-01
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
