--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -12,7 +12,7 @@ For more details and developer visible changes see the ChangeLog file.
 For a list of compatibility related changes see the UPGRADE.asciidoc file.
 
 
-Version X.Y.z released on XXXX-YY-ZZ
+Version X.Y.Z released on XXXX-YY-ZZ
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 New Features
