NEWS for fixe of #1966

--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -26,6 +26,8 @@ Enhancements
 Bug Fixes
 +++++++++
 
+* Added a cleanup of the number in the SMS source (#1966)
+
 Version 7.1.0 released on 2017-06-01
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
