--- a/docs/PacketFence_Administration_Guide.asciidoc
+++ b/docs/PacketFence_Administration_Guide.asciidoc
@@ -2238,13 +2238,13 @@ Also, LinkedIn requires a 'state' parameter for the authorization URL. If you mo
 
 OpenID Connect
 ^^^^^^^^^^^^^^
-Using OpenID Connect is a bit deifferent than other OAuth2 sources. The reason behind that is because you will setup your own OpenID Connect source or depend on a provider for it. Details like token path, authorize path or API URL are specific to your setup. To start create your own or get a host please go here: http://openid.net/connect/. 
+Using OpenID Connect is a bit different than other OAuth2 sources. The reason behind that is because you will setup your own OpenID Connect source or depend on a provider for it. Configuration like token path, authorize path or API URL are specific to your setup. For more information on how to create your own or get a host please visit: http://openid.net/connect/. 
 
 When you create your App, make sure you specify the following as the Callback URL, https://YOUR_PORTAL_HOSTNAME/oauth2/callback. 
 
 Of course, replace the hostname with the values from `general.hostname` and `general.domain`.
 
-OpenID connect have different ways to configure it, make sure to create a client ID and a client secret to work with PacketFence.
+OpenID connect have different ways to be configured, make sure to create a client ID and a client secret to work with PacketFence.
 
 Once you have your information, you need to configure the OAuth2 provider. This can be done by adding an OpenID OAuth2 authentication source from *Configuration -> Policies and Access Control -> Sources*.
 
