--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -23,12 +23,14 @@ Enhancements
 
 * caddy based services now support systemd notifications.
 * Only display readonly actions in readonly mode (PR #2384)
+* Journald total file size is now capped at 1Gb (PR #2389)
 
 Bug Fixes
 +++++++++
 
 * Added a cleanup of the number in the SMS source (#1966)
 * TLS certificates and keys will no longer be overwritten (#2366)
+* journald: limit logfile size #2380
 
 Version 7.1.0 released on 2017-06-01
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
