--- a/html/pfappserver/lib/pfappserver/I18N/en.po
+++ b/html/pfappserver/lib/pfappserver/I18N/en.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 7.1.0\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-06-13 14:13-0400\n"
+"PO-Revision-Date: 2017-06-14 14:37-0400\n"
 "Last-Translator: Inverse inc. <info@inverse.ca>\n"
 "Language-Team: English\n"
 "Language: en\n"
@@ -3435,7 +3435,7 @@ msgid "List of all the choices offered in the access duration action of an authe
 msgstr ""
 
 # conf/documentation.conf (device_registration.allowed_devices)
-msgid "List of allowed devices to be registered via the device registration page."
+msgid "List of allowed devices to be registered via the device registration page. If none are specified, ALL devices will be allowed."
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/Authentication/Source/SMS.pm
